feat: create sorting block

--- a/youtube-client/src/app/settings/settings.component.html
+++ b/youtube-client/src/app/settings/settings.component.html
@@ -1,3 +1,1 @@
-<button class="header__settings">
-  <img class="header__settings-img" src="./assets/settings.svg" alt="settings">
-</button>
+<button class="header__settings" on-click="listen()"></button>
