--- a/youtube-client/src/app/settings/settings.component.scss
+++ b/youtube-client/src/app/settings/settings.component.scss
@@ -7,12 +7,10 @@
 }
 
 .header__settings {
-  display: flex;
+  display: block;
   width: 24px;
   height: 24px;
-  justify-content: center;
-  align-items: center;
-  background-color: #2F80ED;
+  background: url("../../assets/settings.svg") center/cover no-repeat #2F80ED;
   border: none;
   border-radius: 5px;
   filter: drop-shadow(2px 0px 4px #2F80ED);
@@ -20,8 +18,4 @@
 
 .header__settings:hover {
   filter: unset;
-}
-
-.header__settings-img {
-  width: 24px;
 }
