--- a/youtube-client/src/app/header/header.component.html
+++ b/youtube-client/src/app/header/header.component.html
@@ -5,10 +5,11 @@
       <img class="header__logo-img" src="./assets/logo.svg" alt="logo">
     </div>
     <app-search></app-search>
-    <app-settings></app-settings>
+    <app-settings (mode)="showSettings($event)"></app-settings>
   </div>
   <div class="header__right">
     <app-login></app-login>
   </div>
 </div>
+<app-sorting-block *ngIf="settings"></app-sorting-block>
 
