--- a/youtube-client/src/app/header/header.component.scss
+++ b/youtube-client/src/app/header/header.component.scss
@@ -3,7 +3,7 @@
   width: 100%;
   flex-direction: column;
   justify-content: flex-start;
-  background-color: #929292;
+  background-color: #E5E5E5;
 }
 .header__top {
   display: flex;
