feat: create main with cards

--- a/youtube-client/src/app/main/main.component.scss
+++ b/youtube-client/src/app/main/main.component.scss
@@ -9,9 +9,10 @@
 .main__wrapper {
   display: flex;
   max-width: 1200px;
+  box-sizing: border-box;
+  padding: 31px;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: center;
+  justify-content: center;
   gap: 28px;
 }
