feat: create dynamic counters

--- a/youtube-client/src/app/card/card.component.html
+++ b/youtube-client/src/app/card/card.component.html
@@ -2,7 +2,7 @@
   <div class="header__card-img">
     <img class="header__card-image" [src]="imgRef" alt="video image">
   </div>
-  <div class="header__card-social"></div>
+  <app-social></app-social>
   <span class="header__card-description">{{title}}</span>
 </div>
 <button class="header__card-button">
