--- a/youtube-client/src/app/card/card.component.scss
+++ b/youtube-client/src/app/card/card.component.scss
@@ -33,6 +33,13 @@
 
 .header__card-description {
   align-self: self-end;
+  padding: 0 21px 0 19px;
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.3em;
+  line-height: 23px;
+  color: #4F4F4F;
 }
 
 .header__card-button {
