--- a/youtube-client/src/app/settings/settings.component.scss
+++ b/youtube-client/src/app/settings/settings.component.scss
@@ -14,6 +14,7 @@
   border: none;
   border-radius: 5px;
   filter: drop-shadow(2px 0px 4px #2F80ED);
+  cursor: pointer;
 }
 
 .header__settings:hover {
