--- a/youtube-client/src/app/card/card.component.scss
+++ b/youtube-client/src/app/card/card.component.scss
@@ -53,6 +53,12 @@
   border: none;
   border-radius: 5px;
   filter: drop-shadow(2px 0px 4px #2F80ED);
+  cursor: pointer;
+}
+
+.header__card-button:hover {
+  background: #5EA2FF;
+  filter: unset;
 }
 
 .header__card-btn {
