feat: add animation setting menu

--- a/youtube-client/src/app/header/header.component.html
+++ b/youtube-client/src/app/header/header.component.html
@@ -11,5 +11,5 @@
     <app-login></app-login>
   </div>
 </div>
-<app-sorting-block *ngIf="settings"></app-sorting-block>
+<app-sorting-block @showSettings *ngIf="settings"></app-sorting-block>
 
