--- a/youtube-client/src/app/card/card.component.scss
+++ b/youtube-client/src/app/card/card.component.scss
@@ -54,9 +54,11 @@
   border-radius: 5px;
   filter: drop-shadow(2px 0px 4px #2F80ED);
   cursor: pointer;
+  transition: margin-top 0.3s linear;
 }
 
 .header__card-button:hover {
+  margin-top: 65px;
   background: #5EA2FF;
   filter: unset;
 }
