--- a/youtube-client/src/app/search/search.component.html
+++ b/youtube-client/src/app/search/search.component.html
@@ -1,4 +1,5 @@
-<input class="header__search-input" type="text" [placeholder]=placeholder>
+<input class="header__search-input" [(ngModel)]="valueSearch" type="text" [placeholder]=placeholder
+       (keyup.enter)="onClick()">
 <button class="header__search-button">
-  <span class="header__search-text">search</span>
+  <span class="header__search-text" on-click = "onClick()">search</span>
 </button>
