--- a/youtube-client/src/app/sorting-block/sorting-block.component.scss
+++ b/youtube-client/src/app/sorting-block/sorting-block.component.scss
@@ -28,10 +28,14 @@
 }
 
 .header__sort-date,
-.header__sort-count,
-.header__sort-word {
+.header__sort-count {
   text-decoration-line: underline;
   color: #2F80ED;
+}
+.header__sort-word {
+  text-decoration-line: none;
+  color: #2F80ED;
+  cursor: auto;
 }
 
 .header__sort-input {
