--- a/youtube-client/src/app/main/main.component.scss
+++ b/youtube-client/src/app/main/main.component.scss
@@ -1,6 +1,7 @@
 :host {
   display: flex;
   width: 100%;
+  min-height: calc(100vh - 130px);
   flex-direction: column;
   justify-content: center;
   align-items: center;
