fix: fix bug into not found

--- a/youtube-client/src/app/header/header.component.html
+++ b/youtube-client/src/app/header/header.component.html
@@ -11,5 +11,5 @@
     <app-login></app-login>
   </div>
 </div>
-<app-sorting-block @showSettings *ngIf="settings" (sendSort)="sorterPipe($event)"></app-sorting-block>
+<app-sorting-block (sendSort)="sorterPipe($event)" @showSettings *ngIf="settings"></app-sorting-block>
 
