--- a/youtube-client/src/app/card/card.component.html
+++ b/youtube-client/src/app/card/card.component.html
@@ -2,7 +2,32 @@
   <div class="header__card-img">
     <img class="header__card-image" [src]="imgRef" alt="video image">
   </div>
-  <app-social></app-social>
+  <div class="header__social">
+    <div class="header__social-wrapper">
+      <div class="header__social-img">
+        <img src="../../assets/viewed.svg" class="header__social-image" alt="icon social">
+      </div>
+      <span class="header__social-counter">{{viewCount}}</span>
+    </div>
+    <div class="header__social-wrapper">
+      <div class="header__social-img">
+        <img src="../../assets/liked.svg" class="header__social-image" alt="icon social">
+      </div>
+      <span class="header__social-counter">{{likes}}</span>
+    </div>
+    <div class="header__social-wrapper">
+      <div class="header__social-img">
+        <img src="../../assets/dislike.svg" class="header__social-image" alt="icon social">
+      </div>
+      <span class="header__social-counter">{{dislikes}}</span>
+    </div>
+    <div class="header__social-wrapper">
+      <div class="header__social-img">
+        <img src="../../assets/group.svg" class="header__social-image" alt="icon social">
+      </div>
+      <span class="header__social-counter">{{comments}}</span>
+    </div>
+  </div>
   <span class="header__card-description">{{title}}</span>
 </div>
 <button class="header__card-button">
