--- a/youtube-client/src/app/sorting-block/sorting-block.component.scss
+++ b/youtube-client/src/app/sorting-block/sorting-block.component.scss
@@ -28,7 +28,12 @@
 .header__sort-word {
   text-decoration-line: none;
   color: #2F80ED;
-  cursor: auto;
+  cursor: pointer;
+}
+
+.header__sort-word:active {
+  color: #830202;
+  text-decoration: underline #b211ce dotted;
 }
 
 .header__sort-input {
