fix: fix some recommendations

--- a/youtube-client/src/app/button-view/button-view.component.html
+++ b/youtube-client/src/app/button-view/button-view.component.html
@@ -1,1 +1,1 @@
-<span class="header__sort-count" on-click="onSortView()">count of views</span>
+<span class="header__sort-count" (click)="onSortView()">count of views</span>
