--- a/youtube-client/src/app/button-date/button-date.component.html
+++ b/youtube-client/src/app/button-date/button-date.component.html
@@ -1,1 +1,1 @@
-<span class="header__sort-date" on-click="onSortDate()">date</span>
+<span class="header__sort-date" (click)="onSortDate()">date</span>
