--- a/youtube-client/src/app/shared/components/card/card.component.html
+++ b/youtube-client/src/app/shared/components/card/card.component.html
@@ -5,25 +5,25 @@
   <div class="header__social">
     <div class="header__social-wrapper">
       <div class="header__social-img">
-        <img src="../../assets/viewed.svg" class="header__social-image" alt="icon social">
+        <img src="../../../../assets/viewed.svg" class="header__social-image" alt="icon social">
       </div>
       <span class="header__social-counter">{{viewCount}}</span>
     </div>
     <div class="header__social-wrapper">
       <div class="header__social-img">
-        <img src="../../assets/liked.svg" class="header__social-image" alt="icon social">
+        <img src="../../../../assets/liked.svg" class="header__social-image" alt="icon social">
       </div>
       <span class="header__social-counter">{{likes}}</span>
     </div>
     <div class="header__social-wrapper">
       <div class="header__social-img">
-        <img src="../../assets/dislike.svg" class="header__social-image" alt="icon social">
+        <img src="../../../../assets/dislike.svg" class="header__social-image" alt="icon social">
       </div>
       <span class="header__social-counter">{{dislikes}}</span>
     </div>
     <div class="header__social-wrapper">
       <div class="header__social-img">
-        <img src="../../assets/group.svg" class="header__social-image" alt="icon social">
+        <img src="../../../../assets/group.svg" class="header__social-image" alt="icon social">
       </div>
       <span class="header__social-counter">{{comments}}</span>
     </div>
