--- a/youtube-client/src/app/youtube/components/settings/settings.component.scss
+++ b/youtube-client/src/app/youtube/components/settings/settings.component.scss
@@ -10,7 +10,7 @@
   display: block;
   width: 24px;
   height: 24px;
-  background: url("../../assets/settings.svg") center/cover no-repeat #2F80ED;
+  background: url("../../../../assets/settings.svg") center/cover no-repeat #2F80ED;
   border: none;
   border-radius: 5px;
   filter: drop-shadow(2px 0px 4px #2F80ED);
