--- a/youtube-client/src/app/app.component.html
+++ b/youtube-client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="page">
-  <app-header (sendSearchParam)="onInputSearchParam($event)"></app-header>
+  <app-header></app-header>
   <app-main></app-main>
 </div>
 
