--- a/youtube-client/src/app/shared/components/card/card.component.scss
+++ b/youtube-client/src/app/shared/components/card/card.component.scss
@@ -12,6 +12,10 @@
   filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.25));
 }
 
+:host:hover {
+  filter: drop-shadow(0 0 10px rgb(5, 89, 54));
+}
+
 .header__card-top {
   display: flex;
   height: 201px;
