feat: add route main module

--- a/youtube-client/src/app/core/pages/not-found/not-found.component.html
+++ b/youtube-client/src/app/core/pages/not-found/not-found.component.html
@@ -1,5 +1,6 @@
-<div class="main__img-404">
-  <img class="main__image-404" src="../../../../assets/404.svg" alt="Not found">
+<div class="main__not-found">
+  <div class="main__img-404">
+    <img class="main__image-404" src="../../../../assets/404.svg" alt="Not found">
+  </div>
+  <span class="main__text-404">Sorry, smth went wrong((</span>
 </div>
-<span class="main__text-404">Sorry, smth went wrong((</span>
-
