--- a/youtube-client/src/app/core/pages/not-found/not-found.component.scss
+++ b/youtube-client/src/app/core/pages/not-found/not-found.component.scss
@@ -1,5 +1,11 @@
 :host {
   display: flex;
+  box-sizing: border-box;
+  justify-content: center;
+  align-items: center;
+}
+.main__not-found {
+  display: flex;
   max-width: 360px;
   min-height: 100px;
   flex-direction: row;
