feat: add params into routing of search

--- a/youtube-client/src/app/core/pages/header/header.component.html
+++ b/youtube-client/src/app/core/pages/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="header__left"></div>
   <div class="header__center">
     <div class="header__logo">
-      <img class="header__logo-img" src="../../../../assets/logo.svg" alt="logo">
+      <img class="header__logo-img" ngSrc="../../../../assets/logo.svg" alt="logo" height="50" width="50">
     </div>
     <app-search></app-search>
     <app-settings (mode)="showSettings($event)"></app-settings>
