feat: add authentication forms

--- a/youtube-client/src/app/core/pages/header/header.component.html
+++ b/youtube-client/src/app/core/pages/header/header.component.html
@@ -8,7 +8,7 @@
     <app-settings (mode)="showSettings($event)"></app-settings>
   </div>
   <div class="header__right">
-    <app-login></app-login>
+    <app-login-button></app-login-button>
   </div>
 </div>
 <app-sorting-block @showSettings *ngIf="settings"></app-sorting-block>
