--- a/youtube-client/src/app/core/components/login-button/login-button.component.html
+++ b/youtube-client/src/app/core/components/login-button/login-button.component.html
@@ -1,4 +1,4 @@
 <span class="header__login-text" [textContent]=login></span>
-<button class="header__login-button">
+<button class="header__login-button" (click)="openLogin()">
   <img class="header__login-img" src="../../../../assets/login.svg" alt="logo" aria-hidden="true">
 </button>
