--- a/youtube-client/src/app/auth/components/login-form/login-form.component.scss
+++ b/youtube-client/src/app/auth/components/login-form/login-form.component.scss
@@ -52,6 +52,8 @@
 .main__password-indicator {
   width: 100%;
   height: 5px;
+  background-color: #EB5757;
+  border-radius: 0 0 5px 5px;
 }
 
 .main__entrance-wrapper {
@@ -105,4 +107,8 @@
   filter: drop-shadow(2px 0px 4px #2F80ED);
 }
 
-
+.main__login-button:disabled {
+  color: #1b3757;
+  background-color: #dddfe8;
+  filter: drop-shadow(2px 0px 4px #8e9eaf);
+}
