--- a/youtube-client/src/app/auth/components/registration-form/registration-form.component.scss
+++ b/youtube-client/src/app/auth/components/registration-form/registration-form.component.scss
@@ -19,7 +19,7 @@
   width: 100%;
   height: 48px;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
 
 .main__registration-title {
@@ -45,7 +45,7 @@
   width: 100%;
   height: 5px;
   border-radius: 0 0 5px 5px;
-  background-color: #E0E0E0;
+  background-color: #EB5757;
 }
 
 .main__registration-entrance {
@@ -97,4 +97,10 @@
 .main__registration-button:active {
   background-color: #2F80ED;
   filter: drop-shadow(2px 0px 4px #2F80ED);
+}
+
+.main__registration-button:disabled {
+  color: #1b3757;
+  background-color: #dddfe8;
+  filter: drop-shadow(2px 0px 4px #8e9eaf);
 }
