--- a/youtube-client/src/app/shared/components/card/card.component.html
+++ b/youtube-client/src/app/shared/components/card/card.component.html
@@ -31,6 +31,6 @@
   <span class="header__card-description">{{title}}</span>
 </div>
 <button class="header__card-button">
-  <span class="header__card-btn">more...</span>
+  <span class="header__card-btn" (click)="toMoreInfo()">more...</span>
 </button>
 <div class="header__card-bottom" [style.background-color]="colorBottom"></div>
