--- a/youtube-client/src/app/youtube/pages/main/main.component.scss
+++ b/youtube-client/src/app/youtube/pages/main/main.component.scss
@@ -3,7 +3,7 @@
   width: 100%;
   min-height: calc(100vh - 130px);
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -15,5 +15,6 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: flex-start;
   gap: 28px;
 }
