fix: fix bugs with date view

--- a/youtube-client/src/app/youtube/pages/card-details/card-details.component.html
+++ b/youtube-client/src/app/youtube/pages/card-details/card-details.component.html
@@ -12,7 +12,7 @@
       <div class="main__top-info">
         <div class="main__info-label">
           <span class="main__info-title">{{title}}</span>
-          <span class="main__info-date">{{date}}</span>
+          <span class="main__info-date">{{date | date: 'EEEE, MMMM d, y'}}</span>
         </div>
         <div class="main__info-description">
           <span class="main__info-describe">Description</span>
