--- a/youtube-client/src/app/youtube/pages/card-details/card-details.component.scss
+++ b/youtube-client/src/app/youtube/pages/card-details/card-details.component.scss
@@ -98,6 +98,9 @@
 }
 
 .main__info-date {
+  display: block;
+  min-width: 125px;
+  align-self: flex-end;
   font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 400;
