feat: add debounce on input

--- a/youtube-client/src/app/core/components/search/search.component.html
+++ b/youtube-client/src/app/core/components/search/search.component.html
@@ -1,5 +1,1 @@
-<input class="header__search-input" [(ngModel)]="valueSearch" type="text" [placeholder]=placeholder
-       (keyup.enter)="onClick()">
-<button class="header__search-button" (click)="onClick()">
-  <span class="header__search-text">search</span>
-</button>
+<input class="header__search-input" #inputData type="text" [placeholder]=placeholder>
