refactor: rebuild authorization for mail

--- a/youtube-client/src/app/core/components/login-button/login-button.component.scss
+++ b/youtube-client/src/app/core/components/login-button/login-button.component.scss
@@ -1,7 +1,7 @@
 :host {
   display: flex;
   box-sizing: border-box;
-  width: 134px;
+  min-width: 134px;
   padding: 5px;
   flex-direction: row;
   justify-content: center;
