--- a/youtube-client/src/app/auth/pages/login/login.component.html
+++ b/youtube-client/src/app/auth/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="main__login-window">
   <span class="main__login-title">Login</span>
   <div class="main__login-block">
-    <app-login-form (event)="showInfo($event)"></app-login-form>
+    <app-login-form (eventSender)="showInfo($event)"></app-login-form>
   </div>
 </div>
 
