--- a/youtube-client/src/app/auth/components/registration-form/registration-form.component.scss
+++ b/youtube-client/src/app/auth/components/registration-form/registration-form.component.scss
@@ -1,12 +1,13 @@
 :host {
   display: flex;
+  width: 100%;
   justify-content: center;
   align-items: center;
 }
 
 .main__registration-form {
   display: flex;
-  width: 304px;
+  width: 100%;
   height: 291px;
   flex-direction: column;
   justify-content: flex-start;
@@ -17,9 +18,9 @@
 .main__registration-wrapper {
   display: flex;
   width: 100%;
-  height: 48px;
+  height: 62px;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-between;
 }
 
 .main__registration-title {
@@ -43,7 +44,13 @@
 
 .main__registration-indicator {
   width: 100%;
-  height: 5px;
+  height: 20px;
+  box-sizing: border-box;
+  padding: 2px 0 2px 5px;
+  font-family: Roboto, serif;
+  font-size: 0.6em;
+  font-weight: 400;
+  color: #0b025b;
   border-radius: 0 0 5px 5px;
   background-color: #EB5757;
 }
