--- a/youtube-client/src/app/auth/pages/registration/registration.component.scss
+++ b/youtube-client/src/app/auth/pages/registration/registration.component.scss
@@ -11,7 +11,7 @@
   display: flex;
   box-sizing: border-box;
   width: 345px;
-  height: 393px;
+  height: 460px;
   padding: 30px 20px 26px 20px;
   flex-direction: column;
   justify-content: flex-start;
@@ -28,4 +28,8 @@
   font-size: 1.12em;
   line-height: 27px;
   color: #000000;
+}
+
+.main__registration-block {
+  width: 100%;
 }
