feat: add create new card

--- a/youtube-client/src/app/auth/pages/account/account.component.html
+++ b/youtube-client/src/app/auth/pages/account/account.component.html
@@ -1,4 +1,5 @@
 <div class="main__account-wrapper">
   <span class="main__account-data">User: {{name}}</span>
   <button class="main__account-exit" (click)="exit()">Exit</button>
+  <button class="main__create-card" (click)="toCreateCard()">Create new card</button>
 </div>
