--- a/youtube-client/src/app/auth/components/card-create/card-create.component.scss
+++ b/youtube-client/src/app/auth/components/card-create/card-create.component.scss
@@ -6,6 +6,7 @@
 .main___card-form {
   display: flex;
   width: 100%;
+  height: 512px;
   flex-direction: column;
   justify-content: space-between;
   align-self: flex-start;
